--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,5 +1,5 @@
 {
-  "theme": "moonstone",
-  "cssTheme": "Minimal",
+  "theme": "obsidian",
+  "cssTheme": "Blue Topaz",
   "translucency": false
 }
