--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "d28c68fed1213385",
+        "id": "6a29701e073cf04f",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "HTTP/为什么把某些参数放在请求头中.md",
+            "file": "hidden/Hypothesis.md.md",
             "mode": "source",
             "source": false
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "tag:#索引",
+                "query": "",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "HTTP/为什么把某些参数放在请求头中.md",
+                "file": "hidden/Hypothesis.md.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "HTTP/为什么把某些参数放在请求头中.md",
+                "file": "hidden/Hypothesis.md.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,28 +117,60 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "HTTP/为什么把某些参数放在请求头中.md"
+                "file": "hidden/Hypothesis.md.md"
               }
+            }
+          }
+        ]
+      },
+      {
+        "id": "c51d393cb19a2f43",
+        "type": "tabs",
+        "children": [
+          {
+            "id": "4c413318fbb2d1bb",
+            "type": "leaf",
+            "state": {
+              "type": "markdown",
+              "state": {
+                "file": "go语言学习/zap包使用.md",
+                "mode": "preview",
+                "source": true
+              }
+            }
+          }
+        ]
+      },
+      {
+        "id": "5c81695b1f3bf0da",
+        "type": "tabs",
+        "children": [
+          {
+            "id": "03059ff360d76a41",
+            "type": "leaf",
+            "state": {
+              "type": "empty",
+              "state": {}
             }
           }
         ]
       }
     ],
     "direction": "horizontal",
-    "width": 300,
+    "width": 970,
     "collapsed": true
   },
-  "active": "d28c68fed1213385",
+  "active": "5629fdc5d6feb4f1",
   "lastOpenFiles": [
-    "HTTP/Cookie概览.md",
-    "HTTP/HTTP概览.md",
-    "HTTP/http权威指南.md",
-    "HTTP/HTTPS自签证书.md",
-    "工具/wps激活码.md",
-    "images/20220729154150_382.png",
-    "images/20200510151512758_1191904043.png",
-    "images/20200317214342764_584675177.png",
-    "sql/索引的本质.md",
-    "Pasted image 20220729154200.png"
+    "hypothesis/Obsidian模板插件有此一个足矣！.md",
+    "vue/_v_images/20200216161225312_11613.png",
+    "vue/_v_images/20200216161337850_31484.png",
+    "vue/_v_images/20200215184526456_27898.png",
+    "vue/_v_images/20200215140854214_21720.png",
+    "sql/mysql中的查询缓存.md",
+    "sql/MySQL外键约束.md",
+    "sql/MySQL视图.md",
+    "sql/MySQL隔离级别.md",
+    "sql/MySQL Integer类型与INT(11).md"
   ]
 }
