--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "hidden/Hypothesis.md.md",
-            "mode": "source",
+            "file": "github action使用小计.md",
+            "mode": "preview",
             "source": false
           }
         }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "hidden/Hypothesis.md.md",
+                "file": "github action使用小计.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "hidden/Hypothesis.md.md",
+                "file": "github action使用小计.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "hidden/Hypothesis.md.md"
+                "file": "github action使用小计.md"
               }
             }
           }
@@ -160,8 +160,9 @@
     "width": 970,
     "collapsed": true
   },
-  "active": "5629fdc5d6feb4f1",
+  "active": "6a29701e073cf04f",
   "lastOpenFiles": [
+    "hidden/Hypothesis.md.md",
     "hypothesis/Obsidian模板插件有此一个足矣！.md",
     "vue/_v_images/20200216161225312_11613.png",
     "vue/_v_images/20200216161337850_31484.png",
@@ -170,7 +171,6 @@
     "sql/mysql中的查询缓存.md",
     "sql/MySQL外键约束.md",
     "sql/MySQL视图.md",
-    "sql/MySQL隔离级别.md",
-    "sql/MySQL Integer类型与INT(11).md"
+    "sql/MySQL隔离级别.md"
   ]
 }
