--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "github_action使用小计.md",
+            "file": "Git/github_action使用.md",
             "mode": "source",
             "source": false
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "github_action使用小计.md",
+                "file": "Git/github_action使用.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "github_action使用小计.md",
+                "file": "Git/github_action使用.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "github_action使用小计.md"
+                "file": "Git/github_action使用.md"
               }
             }
           }
@@ -160,8 +160,10 @@
     "width": 970,
     "collapsed": true
   },
-  "active": "6a29701e073cf04f",
+  "active": "5629fdc5d6feb4f1",
   "lastOpenFiles": [
+    "images/Pasted image 20220730235459.png",
+    "Git/github_action使用.md",
     "hidden/Hypothesis.md.md",
     "hypothesis/Obsidian模板插件有此一个足矣！.md",
     "vue/_v_images/20200216161225312_11613.png",
@@ -169,8 +171,6 @@
     "vue/_v_images/20200215184526456_27898.png",
     "vue/_v_images/20200215140854214_21720.png",
     "sql/mysql中的查询缓存.md",
-    "sql/MySQL外键约束.md",
-    "sql/MySQL视图.md",
-    "sql/MySQL隔离级别.md"
+    "sql/MySQL外键约束.md"
   ]
 }
