--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -10,7 +10,7 @@
           "type": "markdown",
           "state": {
             "file": "sql/Explain详解.md",
-            "mode": "preview",
+            "mode": "source",
             "source": false
           }
         }
