--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -5,5 +5,7 @@
   "newLinkFormat": "relative",
   "promptDelete": false,
   "fileSortOrder": "byModifiedTime",
-  "showLineNumber": false
+  "showLineNumber": false,
+  "autoPairMarkdown": false,
+  "autoPairBrackets": false
 }
